8340792: -XX:+PrintInterpreter: instructions should only be printed if printing all InterpreterCodelets